<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.expensetracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    
    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.expensetracker.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions">
        <action
            android:id="@+id/action_transactions_to_addTransaction"
            app:destination="@id/add_transaction_fragment" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.example.expensetracker.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />
    
    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.expensetracker.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/add_transaction_fragment"
        android:name="com.example.expensetracker.ui.transactions.AddTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_transaction" />
</navigation>
